Fixed #72 shift select, some other bugs

--- a/frontend/app/styles/app.sass
+++ b/frontend/app/styles/app.sass
@@ -105,7 +105,7 @@ div.modal-body
 div.upload
   height: 360px !important
   position: relative
-  overflow-y: scroll
+  overflow-y: auto
   overflow-x: hidden
   padding: 0
   width: 100%
